<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2B2D30"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView9"
        android:layout_width="405dp"
        android:layout_height="51dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="160dp"
        android:background="#880E4F"
        android:text="@string/student_no_991674132"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#F3EBEB"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="405dp"
        android:layout_height="51dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="96dp"
        android:background="#880E4F"
        android:text="@string/name_kiret_oberoi"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#F3EBEB"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtViewDie1"
        android:layout_width="162dp"
        android:layout_height="61dp"
        android:background="#880E4F"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="#F4F1F1"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.353" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#880E4F"
        android:text="@string/count_up"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.888" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#880E4F"
        android:text="@string/roll"
        android:textColor="#EDE5E5"
        android:textColorHighlight="@color/white"
        android:textColorLink="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.776" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="190dp"
        android:layout_height="170dp"
        android:background="#ECE0E6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.593"
        app:srcCompat="@drawable/die_1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#880E4F"
        android:backgroundTint="#880E4F"
        android:text="@string/button_clicked"
        android:textColor="#F3EEF4"
        android:textSize="24sp"
        android:textStyle="italic"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="445dp"
        android:layout_height="85dp"
        android:background="#880E4F"
        android:fadingEdge="horizontal"
        android:text="@string/dice_roller"
        android:textAlignment="center"
        android:textColor="#FDFEFF"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.229"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>